# c2pa-font-handler

./: .cspell.json  .gitattributes  .gitignore  .rustfmt.toml  .rusty-hook.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  ReadMe.md  deny.toml  rust-toolchain.toml
.github/: pull_request_template.md
.github/actions/: .gitattributes
.github/actions/add-version-tag/: action.yml  addVersionTag.sh
.github/actions/create-failed-workflow-pr/: action.yml  createPr.sh
.github/actions/create-label/: action.yml  createLabel.sh
.github/actions/create-version-update-prs/: action.yml  createPrs.sh
.github/actions/update-changelog/: action.yml  updateChangelog.sh
.github/actions/update-copyrights/: action.yml  updateCopyrights.sh
.github/workflows/: .audits.yml  .builds.yml  .code-smells.yml  .copyright-update.yml  .create-failed-workflow-pr.yml  .docs.yml  .tests.yml  .version-update.yml  nightly.yml  pull-request.yml  release.yml
c2pa-font-handler/: Cargo.toml  ReadMe.md
c2pa-font-handler/benches/: sfnt.rs  thumbnails.rs  woff1.rs
c2pa-font-handler/benches/utils/: c2pa.rs  profiler.rs  sfnt.rs  woff1.rs
c2pa-font-handler/examples/: render_thumbnail.rs  stub_dsig.rs  woff1.rs
c2pa-font-handler/src/: c2pa.rs  c2pa_test.rs  chunk_reader.rs  chunk_reader_test.rs  chunks.rs  chunks_test.rs  compression.rs  data.rs  data_test.rs  error.rs  lib.rs  magic.rs  magic_test.rs  mime_type.rs  mime_type_test.rs  sfnt.rs  tag.rs  tag_test.rs  thumbnail.rs  utils.rs  utils_test.rs  woff1.rs
c2pa-font-handler/src/compression/: flate2.rs  flate2_test.rs
c2pa-font-handler/src/sfnt/: directory.rs  directory_test.rs  font.rs  font_test.rs  header.rs  header_test.rs  mod.rs  table.rs
c2pa-font-handler/src/sfnt/table/: c2pa.rs  c2pa_test.rs  dsig.rs  dsig_test.rs  generic.rs  generic_test.rs  head.rs  head_test.rs  mod.rs  named_table.rs  named_table_test.rs
c2pa-font-handler/src/thumbnail/: error.rs  png_thumbnail.rs  png_thumbnail_test.rs  svg_thumbnail.rs  svg_thumbnail_test.rs  text.rs  text_test.rs
c2pa-font-handler/src/woff1/: directory.rs  directory_test.rs  font.rs  font_test.rs  header.rs  header_test.rs  metadata.rs  metadata_test.rs  table.rs  table_test.rs
c2pa-font-handler/src/woff1/table/: generic.rs  generic_test.rs  named_table.rs  named_table_test.rs
