# @copyright 2024-2025 Monotype Imaging Inc.
#  
#  Licensed under the Apache License, Version 2.0 (the "License");
#  you may not use this file except in compliance with the License.
#  You may obtain a copy of the License at
#  
#     http://www.apache.org/licenses/LICENSE-2.0
#  
#  Unless required by applicable law or agreed to in writing, software
#  distributed under the License is distributed on an "AS IS" BASIS,
#  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#  See the License for the specific language governing permissions and
#  limitations under the License.
#
# @file Cargo.toml
#
# @brief Cargo configuration file for the c2pa-font-handler crate.
#
[package]
name = "c2pa-font-handler"
version.workspace = true
authors.workspace = true
edition = "2021"
license = "Apache-2.0"

[features]
default = []
woff = ["dep:flate2"]

[dependencies]
anyhow.workspace = true
byteorder.workspace = true
bytes.workspace = true
flate2 = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
clap.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
tracing-test.workspace = true

[lints]
workspace = true

[[example]]
name = "woff1"
required-features = ["woff"]
