# @copyright 2024-2025 Monotype Imaging Inc.
#  
#  Licensed under the Apache License, Version 2.0 (the "License");
#  you may not use this file except in compliance with the License.
#  You may obtain a copy of the License at
#  
#     http://www.apache.org/licenses/LICENSE-2.0
#  
#  Unless required by applicable law or agreed to in writing, software
#  distributed under the License is distributed on an "AS IS" BASIS,
#  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#  See the License for the specific language governing permissions and
#  limitations under the License.
#
# @file Cargo.toml
#
# @brief Cargo configuration file for the c2pa-font-handler crate.
#
[package]
name = "c2pa-font-handler"
version.workspace = true
authors.workspace = true
edition = "2021"
license = "Apache-2.0"

[features]
default = ["png-thumbnails", "svg-thumbnails", "woff"]
compression = ["flate"]
flate = ["dep:flate2"]
png-thumbnails = ["thumbnails", "dep:tiny-skia", "tiny-skia/png", "tiny-skia/png-format"]
thumbnails = ["dep:cosmic-text", "dep:unicode-script"]
svg-thumbnails = ["thumbnails", "dep:svg", "dep:resvg"]
woff = [ "compression" ]

[dependencies]
anyhow.workspace = true
byteorder.workspace = true
bytes.workspace = true
cosmic-text = { workspace = true, optional = true }
flate2 = { workspace = true, optional = true }
resvg = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
svg = { workspace = true, optional = true}
thiserror.workspace = true
tiny-skia = { workspace = true, optional = true }
tracing.workspace = true
unicode-script = { workspace = true, optional = true }

[dev-dependencies]
clap.workspace = true
criterion.workspace = true
dhat = {version = "0.3.3" }
mockall.workspace = true
regex.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
tracing-test.workspace = true

[lints]
workspace = true

[[example]]
name = "woff1"
required-features = ["woff"]

[[example]]
name = "render_thumbnail"
required-features = ["svg-thumbnails"]

[[bench]]
name = "sfnt"
harness = false

[[bench]]
name = "woff1"
required-features = ["woff"]
harness = false